--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "build-client": "npm run build --prefix client",
         "start-server": "node api/app.js",
         "start-client": "npm start --prefix client",
-        "start-dev": "concurrently \"npm run install-client\" \"npm run start-server\" \"npm run start-client\"",
+        "start-dev": "concurrently \"npm run start-server\" \"npm run start-client\"",
         "start": "node api/app.js"
     },
     "author": "Milos Despotovic",
